--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Your Name's Homepage</title>
+    <title>Astear17</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -226,7 +226,7 @@
         <img class="logo-img" src="https://raw.githubusercontent.com/Astear17/astear17.github.io/main/03583A8D-9731-4EDC-B72D-6773464445BA.jpeg" alt="Your Profile Picture" />
         <div class="showcase-title">Your Name</div>
         <div class="showcase-desc">
-            Developer & Tech Enthusiast from Vietnam
+            Developer of iDevPatch & Tech Enthusiast from Vietnam
         </div>
 
         <div class="button-section two-buttons">
@@ -242,12 +242,12 @@
 
         <h3 class="section-header" id="socials">Find Me On</h3>
         <div class="social-links">
-            <a href="#" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
-            <a href="#" target="_blank" title="Facebook"><i class="fab fa-facebook"></i></a>
-            <a href="#" target="_blank" title="Discord"><i class="fab fa-discord"></i></a>
-            <a href="#" target="_blank" title="TikTok"><i class="fab fa-tiktok"></i></a>
-            <a href="#" target="_blank" title="YouTube"><i class="fab fa-youtube"></i></a>
-            <a href="#" target="_blank" title="Telegram"><i class="fab fa-telegram"></i></a>
+            <a href="https://github.com/Astear17" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
+            <a href="https://www.facebook.com/Uma.MoXumXue" target="_blank" title="Facebook"><i class="fab fa-facebook"></i></a>
+            <a href="https://discord.com/users/1036621192515297322" target="_blank" title="Discord"><i class="fab fa-discord"></i></a>
+            <a href="https://www.tiktok.com/@hyper_astear.17" target="_blank" title="TikTok"><i class="fab fa-tiktok"></i></a>
+            <a href="https://www.youtube.com/@Astear17" target="_blank" title="YouTube"><i class="fab fa-youtube"></i></a>
+            <a href="https://t.me/Astear17" target="_blank" title="Telegram"><i class="fab fa-telegram"></i></a>
         </div>
 
         <hr />
@@ -260,16 +260,16 @@
         <hr />
 
         <h3 class="section-header">Contact</h3>
-        <p>Contact me via email, tele phone, Zalo or Messenger:</p>
+        <p>Contact me via email, telephone, Zalo or Messenger:</p>
         <p style="text-align: center; font-size: 1.1rem;"><a href="mailto:youremail@example.com">go548394@gmail.com</a></p>
       <p style="text-align: center; font-size: 1.1rem;"><a href="tel:+84359623729">Phone call: (+84) 359 623 729</a></p>
-      <p style="text-align: center; font-size: 1.1rem;"><a href="https://www.facebook.com/Uma.MoXumXue"Facebook: Lê Thành Nghĩa</a></p>
-      <p style="text-align: center; font-size: 1.1rem;"><a href="mailto:youremail@example.com">Zalo: Lê Thành Nghĩa</a></p>
+      <p style="text-align: center; font-size: 1.1rem;"><a href="https://www.facebook.com/Uma.MoXumXue"Messenger: Lê Thành Nghĩa</a></p>
+      <p style="text-align: center; font-size: 1.1rem;"><a href="https://zaloapp.com/qr/p/wcotot3277t5">Zalo: Lê Thành Nghĩa</a></p>
         
         <hr />
 
         <h3 class="section-header">Support / Donate</h3>
-        <p class="donate-label">ZaloPay</p>
+        <p class="donate-label">ZaloPay: 0359623729 (NGUYEN THI THUONG)</p>
         <img class="donate-qr" src="https://raw.githubusercontent.com/Astear17/astear17.github.io/main/92335C6B-5E4F-47E9-957C-61268AFFC276.jpeg" alt="ZaloPay QR Code">
     </div>
 
