--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 
     <div class="showcase-card">
         <img class="logo-img" src="https://raw.githubusercontent.com/Astear17/astear17.github.io/main/03583A8D-9731-4EDC-B72D-6773464445BA.jpeg" alt="Your Profile Picture" />
-        <div class="showcase-title">Your Name</div>
+        <div class="showcase-title">Astear17</div>
         <div class="showcase-desc">
             Developer of iDevPatch & Tech Enthusiast from Vietnam
         </div>
@@ -262,9 +262,9 @@
         <h3 class="section-header">Contact</h3>
         <p>Contact me via email, telephone, Zalo or Messenger:</p>
         <p style="text-align: center; font-size: 1.1rem;"><a href="mailto:youremail@example.com">go548394@gmail.com</a></p>
-      <p style="text-align: center; font-size: 1.1rem;"><a href="tel:+84359623729">Phone call: (+84) 359 623 729</a></p>
+      <p style="text-align: center; font-size: 1.1rem;"><a href="tel:+84359623729">Telephone: (+84) 359 623 729</a></p>
       <p style="text-align: center; font-size: 1.1rem;"><a href="https://www.facebook.com/Uma.MoXumXue"Messenger: Lê Thành Nghĩa</a></p>
-      <p style="text-align: center; font-size: 1.1rem;"><a href="https://zaloapp.com/qr/p/wcotot3277t5">Zalo: Lê Thành Nghĩa</a></p>
+      <p style="text-align: center; font-size: 1.1rem;"><a href="https://zaloapp.com/qr/p/wcotot3277t5"Zalo: Lê Thành Nghĩa</a></p>
         
         <hr />
 
