--- a/index.html
+++ b/index.html
@@ -262,9 +262,9 @@
         <h3 class="section-header">Contact</h3>
         <p>Contact me via email, telephone, Zalo or Messenger:</p>
         <p style="text-align: center; font-size: 1.1rem;"><a href="mailto:youremail@example.com">go548394@gmail.com</a></p>
-      <p style="text-align: center; font-size: 1.1rem;"><a href="tel:+84359623729">Telephone: (+84) 359 623 729</a></p>
-      <p style="text-align: center; font-size: 1.1rem;"><a href="https://www.facebook.com/Uma.MoXumXue"Messenger: Lê Thành Nghĩa</a></p>
-      <p style="text-align: center; font-size: 1.1rem;"><a href="https://zaloapp.com/qr/p/wcotot3277t5"Zalo: Lê Thành Nghĩa</a></p>
+        <p style="text-align: center; font-size: 1.1rem;"><a href="tel:+84359623729">Telephone: (+84) 359 623 729</a></p>
+        <p style="text-align: center; font-size: 1.1rem;"><a href="https://www.facebook.com/Uma.MoXumXue">Messenger: Lê Thành Nghĩa</a></p>
+        <p style="text-align: center; font-size: 1.1rem;"><a href="https://zaloapp.com/qr/p/wcotot3277t5">Zalo: Lê Thành Nghĩa</a></p>
         
         <hr />
 
