--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
             <a href="https://astear17.github.io/iDevicePatcher" target="_blank" class="redirect-button button-idevice">
                 <i class="fab fa-apple"></i> iDevicePatcher
             </a>
-            <a href="#" target="_blank" class="redirect-button button-ytremark">
+            <a href="https://astear17.github.io/YTRemark" target="_blank" class="redirect-button button-ytremark">
                 <i class="fab fa-youtube"></i> YTRemark (YT Adblock)
             </a>
         </div>
