--- a/index.html
+++ b/index.html
@@ -139,6 +139,14 @@
         .button-ytremark { background: linear-gradient(90deg,#ff4242CC 60%,#ff7373CC 100%);}
         .button-ytremark:hover { background: linear-gradient(90deg,#be123cCC 70%,#f59e42CC 100%);}
 
+        /* New Button Styles */
+        .button-console { background: linear-gradient(90deg, #10b981 60%, #34d399 100%); }
+        .button-console:hover { background: linear-gradient(90deg, #059669 70%, #10b981 100%); }
+
+        .button-vn { background: linear-gradient(90deg, #da251d 60%, #ef4444 100%); }
+        .button-vn:hover { background: linear-gradient(90deg, #991b1b 70%, #da251d 100%); }
+
+
         hr {
             border: none;
             height: 1px;
@@ -235,6 +243,13 @@
             </a>
             <a href="https://astear17.github.io/YTRemark" target="_blank" class="redirect-button button-ytremark">
                 <i class="fab fa-youtube"></i> YTRemark (YT Adblock)
+            </a>
+            
+            <a href="https://astear17.github.io/Console_Tester" target="_blank" class="redirect-button button-console">
+                <i class="fas fa-gamepad"></i> Console Tester
+            </a>
+            <a href="https://astear17.github.io/VNTelexWriter" target="_blank" class="redirect-button button-vn">
+                <i class="fas fa-star"></i> VN Telex Writer
             </a>
         </div>
 
