--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&amp;display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
 
     <style>
-        /* --- Styles --- */
         body {
             margin: 0;
             font-family: 'Inter', Segoe UI, sans-serif;
@@ -139,7 +138,6 @@
         .button-ytremark { background: linear-gradient(90deg,#ff4242CC 60%,#ff7373CC 100%);}
         .button-ytremark:hover { background: linear-gradient(90deg,#be123cCC 70%,#f59e42CC 100%);}
 
-        /* New Button Styles */
         .button-console { background: linear-gradient(90deg, #10b981 60%, #34d399 100%); }
         .button-console:hover { background: linear-gradient(90deg, #059669 70%, #10b981 100%); }
 
@@ -211,7 +209,7 @@
             margin: 15px auto 0 auto;
             max-width: 250px;
             width: 100%;
-            border-radius: 16px; /* Rounded corners */
+            border-radius: 16px; 
             border: 2px solid #38bdf8;
         }
 
@@ -276,7 +274,7 @@
 
         <h3 class="section-header">Contact</h3>
         <p>Contact me via email, telephone, Zalo or Messenger:</p>
-        <p style="text-align: center; font-size: 1.1rem;"><a href="mailto:youremail@example.com">go548394@gmail.com</a></p>
+        <p style="text-align: center; font-size: 1.1rem;"><a href="go548394@gmail.com">Mail: go548394@gmail.com</a></p>
         <p style="text-align: center; font-size: 1.1rem;"><a href="tel:+84359623729">Telephone: (+84) 359 623 729</a></p>
         <p style="text-align: center; font-size: 1.1rem;"><a href="https://www.facebook.com/Uma.MoXumXue">Messenger: Lê Thành Nghĩa</a></p>
         <p style="text-align: center; font-size: 1.1rem;"><a href="https://zaloapp.com/qr/p/wcotot3277t5">Zalo: Lê Thành Nghĩa</a></p>
